Random Letters, objective 3 complete

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <input type="text" id="word-guess">
 
       <button onclick="checkGuess()">Guess</button>
+      <button onclick="updateLetters()">Update Letters</button>
 
       <div id="game-message" class="notice">
         Enter your first guess!
